[gd_scene load_steps=3 format=3 uid="uid://g7273l7uybh4"]

[ext_resource type="Script" path="res://domino.gd" id="1_q36dc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5h21r"]
size = Vector2(40, 80)

[node name="Domino" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 80.0
pivot_offset = Vector2(25, 45)
mouse_filter = 2
script = ExtResource("1_q36dc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(20, 40)
shape = SubResource("RectangleShape2D_5h21r")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftMargin" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TopMargin" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TopLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "TOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Divider" type="ColorRect" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(33, 2)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="BottomLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "BOT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomMargin" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightMargin" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
